--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# classifies `.mlapp` files as MATLAB:
+*.mlapp linguist-language=matlab
